crates/tmark-writers/tests/snapshots/fixtures__moustache@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Built with as but not `{{ code }}`.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
