crates/tmark-writers/tests/snapshots/fixtures__notes-and-abbr@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
The \tsacr{HTML} spec\footnote{The living standard.} is maintained by the \tsacr{W3C}.

---requires---
{
  "packages": [
    "glossaries"
  ],
  "fragments": [
    "ts-glossary"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [
    "HTML",
    "W3C"
  ],
  "index": [],
  "counters": []
}
