crates/tmark-writers/tests/snapshots/fixtures__progressbar-escaped@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>Write [=45% &quot;Review&quot;] for a bar, [=100%] for a full one; [=x%] is text.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
