crates/tmark-writers/tests/snapshots/fixtures__progressbar@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p><span class="progress"><progress value="25" max="100">Research</progress><span class="progress-label">Research</span></span>
<span class="progress thin"><progress value="45" max="100">Review</progress><span class="progress-label">Review</span></span></p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
