crates/tmark-writers/tests/snapshots/fixtures__progressbar@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\tsprogress{0.25}{Research}
\tsprogress[thin]{0.45}{Review}

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
