crates/tmark-writers/tests/snapshots/fixtures__reference-bare@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>See <span class="unresolved">[?sec:intro]</span> and <span class="unresolved">[?ein05]</span>, not <a href="mailto:me@example.com">me@example.com</a>.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
