crates/tmark-writers/tests/snapshots/fixtures__reference-bare@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
See [?sec:intro] and [?ein05], not \href{mailto:me@example.com}{me@example.com}.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
